fix: force table display:table to prevent shrink-wrap from vue.css

--- a/docs/custom.css
+++ b/docs/custom.css
@@ -243,6 +243,8 @@ section.content {
 }
 
 .markdown-section table {
+  display: table !important;
+  overflow: visible !important;
   width: 100% !important;
   border-collapse: collapse !important;
   font-size: 14px !important;
